fixed title page; cleaned up hyp table

--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -1,12 +1,11 @@
 ---
-title: Influence of temperature and upwelling intensity on Indian oil sardine (*Sardinella longiceps*) landings
-author: ''
+title: \LARGE{Influence of temperature and upwelling intensity on Indian oil sardine (\textit{Sardinella longiceps}) landings}
+author: \newline Eli Holmes$^1$, Smitha B.R.$^2$, Nimit Kumar$^3$, Sourav Maity$^3$, David Checkley$^4$, Mark Wells$^5$, Vera Trainer$^1$
 date: '`r format(Sys.time(), "%d %B, %Y")`'
-output:
-  word_document: default
-  md_document: default
+output: 
   pdf_document: default
-  html_document: default
+csl: '`r system.file("docs", "ecology.csl", package = "SardineForecast")`'
+bibliography: '`r system.file("docs", "Sardine.bib", package = "SardineForecast")`'
 header-includes:
 - \usepackage[labelformat=empty]{caption}
 - \usepackage{setspace}
@@ -17,15 +16,30 @@ header-includes:
 - \usepackage{mathptmx}
 - \usepackage[margin=1in]{geometry}
 - \usepackage[fontsize=12.5pt]{scrextend}
-csl: '`r system.file("docs", "ecology.csl", package = "SardineForecast")`'
-bibliography: '`r system.file("docs", "Sardine.bib", package = "SardineForecast")`'
+- \usepackage{lineno}
+- \linenumbers
 ---
+
 
 ```{r child = 'setup.Rmd'}
 #Generic setup code common across all Rmds
 ```
 
-# Introduction
+1. NWFSC, Seattle, 2. CMLRE, Kochi, India, 3. INCOIS, Hyderabad, India, 4. UCSD, San Diego, 5. Univ of Maine.
+
+
+\begin{abstract}
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+%All article types: you may provide up to 8 keywords; at least 5 are mandatory.
+
+\section{Keywords:} Text Text Text Text Text Text Text Text 
+
+\end{abstract}
+
+\clearpage
+
+# Introduction {-}
 
 <!-- small pelagics are influenced by the environment -->
 Environmental variability is known to be a key driver of population variability of small forage fish such as sardines, anchovy and herring [@Bakun1996; @AlheitHagen1997; @Curyetal2000; @Checkleyetal2017].  In particular, ocean temperature and upwelling dynamics, along with density-dependent feedback, have been identified as important in affecting recruitment success and biomass of European and Pacific sardines  (*Sardina pilchardus* and *Sardinops sagax*) [@JacobsonMacCall1995; @RykaczewskiCheckley2008; @Alheitetal2012; @LindegrenCheckley2012; @Lindegrenetal2013]. Like other sardines, the Indian oil sardines show strong interannual fluctuations and larger decadal booms and busts. The Indian oil sardine offers an instructive case study to investigate the effects of environmental variability, particularly temperature and upwelling dynamics, as they occupy an ocean system that is warmer than that occupied by other sardines and have a strong seasonal cycle driven by the Indian summer monsoon.
@@ -34,7 +48,7 @@ Environmental variability is known to be a key driver of population variability 
 The Indian oil sardine (*Sardinella longiceps* Valenciennes, 1847) is one of the most commercially important fish resources along the southwest coast of India (Figure `r ref("fig:studyarea")`) and historically has comprised approximately 25% of the catch biomass [@Vivekanandanetal2003].  Landings of the Indian oil sardine are highly seasonal, peaking after the summer monsoon period in October-December and reaching a nadir in spring before the summer monsoon in April-June (Figure `r ref("fig:catch")`). At the same time, the landings of this small pelagic finfish are highly variable from year to year.  Small pelagics are well known to exhibit high variability in biomass due to the effects of environmental conditions on survival and recruitment [@Bakun1996; @AlheitHagen1997; @Curyetal2000; @Checkleyetal2017].  In this fishery, however, environmental conditions also affect exposure of sardines to the fishery.  Until recently, the Indian oil sardine fishery was artisanal and based on small human or low powered boats with no refrigeration. The fishery was confined to nearshore waters, and thus migration of sardines in and out of the coastal zone greatly affected exposure to the fishery.
 
 <!-- review of looking at env vars -->
-Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine in order to understand the factors that drive landings variability. Precipitation during the southwest monsoon and the day of the monsoon arrival are thought to act as either a direct or indirect cue, as an index of other climatic conditions, for spawning [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1974; @Srinath1998; @Jayaprakash2002].  Many studies have looked for correlations between precipitation, however the reported effects are positive in some studies and negative in others [@Madhupratapetal1994]. Researchers have also looked for and found correlations with various metrics of upwelling intensity, such as sea level at Cochin [@MurtyEdelman1966; @LonghurstWooster1990; @Madhupratapetal1994; @Srinath1998; @Jayaprakash2002; @Thara2011], salinity and bottom sea temperature [@Krishnakumaretal2008], and with direct measures of productivity, such as nearshore zooplankton and phytoplankton abundance [@Hornell1910; @Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012; @Piontkovskietal2015; @Menonetal2019].  Researchers have also found correlations with near-shore sea surface temperature (SST). SST  can affect both somatic growth rates and juvenile survival but also can cause fish to move off-shore and away from the shore-based fishery [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991]. The El Niño/Southern Oscillation (ENSO) has a cascading effect on all the aforementioned environmental parameters (SST, precipitation, upwelling) which in turn impact oil sardines, and correlations have been found between ENSO indices and landings with a 9- to 12-month lag [@Rohitetal2018]. 
+Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine in order to understand the factors that drive landings variability. Precipitation during the southwest monsoon and the day of the monsoon arrival are thought to act as either a direct or indirect cue, as an index of other climatic conditions, for spawning [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1974; @Srinath1998; @Jayaprakash2002].  Many studies have looked for correlations between precipitation, however the reported effects are positive in some studies and negative in others [@Madhupratapetal1994]. Researchers have also looked for and found correlations with various metrics of upwelling intensity, such as sea level at Cochin [@MurtyEdelman1966; @LonghurstWooster1990; @Madhupratapetal1994; @Srinath1998; @Jayaprakash2002; @Thara2011], salinity and bottom sea temperature [@Krishnakumaretal2008], and with direct measures of productivity, such as nearshore zooplankton and phytoplankton abundance [@Hornell1910; @Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012; @Piontkovskietal2015; @Menonetal2019].  Researchers have also found correlations with near-shore sea surface temperature (SST)  [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991; @Suprabaetal2016]. SST  can affect both somatic growth rates and juvenile survival but also can cause fish to move off-shore and away from the shore-based fishery. The multi-year average sea temperature is postulated to have effects on recruitment and the survival of larval and juvenile sardines, which affect the later  overall abundance [@Takasukaetal2007; @Checkleyetal2017]. The El Ni\~{n}o/Southern Oscillation (ENSO) has a cascading effect on all the aforementioned environmental parameters (SST, precipitation, upwelling) which in turn impact oil sardines, and correlations have been found between ENSO indices and landings with a 9- to 12-month lag [@Suprabaetal2016; @Rohitetal2018]. 
 
 <!--
 Mury and Edelman used atmospheric presure differential as the metric of monsoon intensity and found a different pattern. Effect of monsoon was negative up to a theshold and then effect was positive after that. They gave a weird explaination. Low DO was bad up to the theshold but after threshold, it increased producivity. Used 1928-1955 landings.
@@ -42,7 +56,7 @@ Mury and Edelman used atmospheric presure differential as the metric of monsoon 
 
 In this paper, we study the utility of environmental covariates from remote sensing to explain year-to-year variability in oil sardine landings using the time series of quarterly Indian oil sardine landings from the southwest coast of India. This time series is derived from a stratified sampling design that surveys landing sites along the southeast Indian coast and was first implemented in the 1950s [@Srinathetal2005]. This is purely a landings time series. Catch-at-length data are not available prior to 2001. Effort data are indirect (boat composition of the fishery) and appropriate effort data (estimates of number of trips or hours fishing) are only available in a few recent years.  In addition, stock size estimates and fisheries independent data are unavailable. Thus traditional length- or age-structured models (e.g. virtual population analysis) which produce biomass estimates are not possible. Instead we use statistical models with covariates to model and produce a one-year ahead forecast of landings. Unlike prior work on landings models with covariates, we use non-linear time-series models to allow a flexible effect of covariates and past catch on current landings.  We also specifically focus on environmental covariates measured via remote sensing.  Remote sensing data provide long time series of environmental data over a wide spatial extent at a daily and monthly resolution.  A better understanding of how and whether remote sensing data explains variation in seasonal catch will support future efforts to use remote sensing data to improve catch forecasts. 
 
-Modeling and forecasting landings data using statistical models fit to annual or seasonal catch time series has a long tradition in fisheries and has been applied to many species [@Mendelssohn1981; @CohenStone1987; @NobelSathianandan1991; @StergiouChristou1996;  @Lloretetal2000; @Georgakarakosetal2006; @Pristaetal2011; @FarmerFroeschke2015; @Lawer2016], including oil sardines [@Srinath1998; @VenugopalanSrinath1998]. These models can be used to identity the variables correlated with catch fluctuations and can be used to provide landings forecasts which are useful for fishery managers and the fishing industry. An example of the former is using catch forecasts to set or give warnings of seasonal fishery closures if the forecasted catch is higher than the allowed catch limits [@FarmerFroeschke2015]. An example of the latter is the annual Gulf and Atlantic menhaden forecast produced by NOAA Fisheries; the report is titled, "Forecast for the 20XX Gulf and Atlantic purse-seine fisheries and review of the 20XX fishing season".  A multiple regression model with environmental covaraites, similar to the model used in our paper, was developed by NOAA Fisheries in the 1970s [@Schaafetal1975]. This model has been used for the last 45 years to produce an annual forecast of menhaden landings. This forecast was requested by the menhaden fishing industry and has been used for planning purposes by the industry, not only the fishers but also fish catch sellers and buyers, businesses which provide fisheries gear, and banks which provide financing [@Hansenetal2006].
+Modeling and forecasting landings data using statistical models fit to annual or seasonal catch time series has a long tradition in fisheries and has been applied to many species [@Mendelssohn1981; @CohenStone1987; @NobelSathianandan1991; @StergiouChristou1996;  @Lloretetal2000; @Georgakarakosetal2006; @Hansenetal2006; @Pristaetal2011; @FarmerFroeschke2015; @Lawer2016], including oil sardines [@Srinath1998; @VenugopalanSrinath1998]. These models can be used to identity the variables correlated with catch fluctuations and can be used to provide landings forecasts which are useful for fishery managers and the fishing industry. An example of the former is using catch forecasts to set or give warnings of seasonal fishery closures if the forecasted catch is higher than the allowed catch limits [@FarmerFroeschke2015]. An example of the latter is the annual Gulf and Atlantic menhaden forecast produced by NOAA Fisheries; the report is titled, "Forecast for the 20XX Gulf and Atlantic purse-seine fisheries and review of the 20XX fishing season".  A multiple regression model with environmental covaraites, similar to the model used in our paper, was developed by NOAA Fisheries in the 1970s [@Schaafetal1975]. This model has been used for the last 45 years to produce an annual forecast of menhaden landings. This forecast was requested by the menhaden fishing industry and has been used for planning purposes by the industry, not only the fishers but also fish catch sellers and buyers, businesses which provide fisheries gear, and banks which provide financing [@Hansenetal2006].
 
 The goal of the work presented here is to determine the environmental covariates which explain catch variability and improve the accuracy of catch forecasts. Landings of oil sardines are determined by biomass, catchability, and effort. Catchability is mainly determined by the inshore versus offshore distribution of the sardine. The fishery is restricted to the nearshore < 50 km offshore [@Rohitetal2018] and when the sardines move offshore to spawn or to avoid hypoxic or excessive warm water, they are no longer available to the fishery. Thus the environment has a strong impact on catchibility. Recruitment and survival tied to the the environmental factors which determine food resources. The covariates studied are directly linked to known and conjectured connections between the environment and oil sardine that are expected to affect catch. This work is part of a joint research project between US and Indian research agencies: the National Marine Fisheries Service, NOAA, USA and the Indian National Centre for Ocean Information Services and the Centre for Marine Living Resources and Ecology, in the Ministry of Earth Sciences, India. The project objective is to develop a operational forecast of sardine landings, to be used by the Indian fishery industry for planning.
 
@@ -67,7 +81,7 @@ Catches along the Kerala coast are high throughout the year except during quarte
 
 ## Contrast between catch modeling versus biomass modeling
 
-Yearly effort data for the individual gears is not available for the entire catch time series and the data available on size of the fleet are a coarse metric of effort and thus are difficult to use to compute catch-per-unit effort stastistics. Nonetheless the number of boats and fishers involved in the fishery has been increasing as the population in Kerala has increased. Oil sardines are caught primarly by ring seines, which was introduced in the early 1980s. Ring seines of different sizes are used both both traditional small boats with a small outboard motor and large mechanized ships [@DasEdmin2018]. Since 1985, the ring seine fishery has expanded steadily in terms of horsepower, size of boats, length of nets. There are concerns that overfishing and especially catch of juveniles, which are at time discarded [@DasEdmin2018] is a factor in the most recent oil sardine declines [@Kripaetal2018].
+Yearly effort data for the individual gears is not available for the entire catch time series and the data available on size of the fleet are a coarse metric of effort and thus are difficult to use to compute catch-per-unit effort stastistics. Nonetheless the number of boats and fishers involved in the fishery has been increasing as the population in Kerala has increased. Oil sardines are caught primarly by ring seines, which was introduced in the early 1980s. Ring seines of different sizes are used both both traditional small boats with a small outboard motor and large mechanized ships [@DasEdwin2018]. Since 1985, the ring seine fishery has expanded steadily in terms of horsepower, size of boats, length of nets. There are concerns that overfishing and especially catch of juveniles, which are at time discarded [@DasEdwin2018] is a factor in the most recent oil sardine declines [@Kripaetal2018].
 
 The actual effort in the fishery is complex. It depends both on the fleet size and composition, but also depends on the fishers decisions about what species to fish for, where to fish for them (which affects transit time versus fishing time), 
 
@@ -81,7 +95,7 @@ As the success of commercial fishery for each season is determined by the number
 -->
 
 
-# Materials and Methods
+# Materials and Methods {-}
 
 ## Sardine landing data
 
@@ -176,7 +190,7 @@ $ln(C_{i,t}) = M + s_1(V_{1,t}) + s_2(V_{2,t-1}) + \epsilon_t$ or $ln(C_{i,t}) =
 where $M$ was the best catch model from step 1.  Thus models with covariates modeled both as a linear and non-linear effect were compared. The covariates tested are those discussed in the section on covariates that have been hypothesized to drive the size of the sardine biomass exposed to the fishery. We tested both models with one and two covariates, and did not use correlated covariates in the same model.
 
 
-# Results
+# Results {-}
 
 ## Catches in prior seasons as explanatory variables
 
@@ -201,9 +215,9 @@ The strongest correlation however was found with the multi-year average sea surf
 
 # Discussion
 
-Sardines in all the world's ecosystems exhibit large fluctuations in abundance [@Baumgartneretal1992].  These small forage fish are strongly influenced by natural variability in the ocean environment. Upwelling, influenced by both large-scale forces such as regimes shifts and El Niño/Southern Oscillation patterns [@AlheitHagen1997; @Schwartzloseetal1999] and by seasonal wind and current patterns, brings nutrient rich and oxygen rich waters to the surface. This drives the seasonal variability in phytoplankton resources and in turn sardine prey [@Bakunetal2008]. Local variability in temperature, salinity, and oxygen levels have both direct and indirect on sardine reproduction, recruitment and survival [@Checkleyetal2017]. Sardines are also influenced by competition and predation by other species and well-known for their sensitivity to over-fishing which has been linked to many fishery collapses [@Kripaetal2018].
+Sardines in all the world's ecosystems exhibit large fluctuations in abundance [@Baumgartneretal1992].  These small forage fish are strongly influenced by natural variability in the ocean environment. Upwelling, influenced by both large-scale forces such as regimes shifts and El Ni\~{n}o/Southern Oscillation patterns [@AlheitHagen1997; @Schwartzloseetal2010] and by seasonal wind and current patterns, brings nutrient rich and oxygen rich waters to the surface. This drives the seasonal variability in phytoplankton resources and in turn sardine prey [@Bakunetal2008]. Local variability in temperature, salinity, and oxygen levels have both direct and indirect on sardine reproduction, recruitment and survival [@Checkleyetal2017]. Sardines are also influenced by competition and predation by other species and well-known for their sensitivity to over-fishing which has been linked to many fishery collapses [@Kripaetal2018].
 
-Many studies on Pacific sardines have looked at the correlation between ocean temperature (SST) and recruitment.  Temperature can have direct effect on larval survival and growth and an indirect effect on food availability.  Studies in the California Current System, have found that SST explains year-to-year variability in Pacific sardine recruitment [@JacobsonMacCall1995; @Checkleyetal2009; @LindegrenCheckley2012; @Checkleyetal2017] and that the average nearshore temperature over multiple seasons is the explanatory variable. Similar to  these studies, we found that the average nearshore SST over multiple seasons was the covariate that explained the most variability in catch both in the monsoon and post-monsoon months. McClatchie et al. [-@McClatchieetal2010] found no SST relationship with SST and Pacific sardine recruitment, however their analysis used a linear relationship while the other studies, and ours, that found a relationship [@JacobsonMacCall1995; @Checkleyetal2017] allowed a non-linear relationship.  Both Jacobson and MacCall (1995) and Checkley et al (2017) found a step-like response function for temperature: below a threshold value the effect of temperature was linear and above the threshold, the effect was flat and at lower temperatures the effect was negative and became positive as temperature increased.  Our analysis found a similar pattern with a negative effect when the 2.5-year average temperature was below $28.35^\circ$C and positive above and with the positive effect leveling off above $28.5^\circ$C (Figure `r ref("fig:cov-effects")`).
+Many studies on Pacific sardines have looked at the correlation between ocean temperature (SST) and recruitment.  Temperature can have direct effect on larval survival and growth and an indirect effect on food availability.  Studies in the California Current System, have found that SST explains year-to-year variability in Pacific sardine recruitment [@JacobsonMacCall1995; @Checkleyetal2009; @LindegrenCheckley2012; @Checkleyetal2017] and that the average nearshore temperature over multiple seasons is the explanatory variable. Similar to  these studies, we found that the average nearshore SST over multiple seasons was the covariate that explained the most variability in catch both in the monsoon and post-monsoon months. McClatchie et al. [-@McClatchieetal2010] found no SST relationship with SST and Pacific sardine recruitment, however their analysis used a linear relationship while the other studies, and ours, that found a relationship [@JacobsonMacCall1995; @Checkleyetal2017] allowed a non-linear relationship.  Both Jacobson and MacCall (1995) and Checkley et al. (2017) found a step-like response function for temperature: below a threshold value the effect of temperature was linear and above the threshold, the effect was flat and at lower temperatures the effect was negative and became positive as temperature increased.  Our analysis found a similar pattern with a negative effect when the 2.5-year average temperature was below $28.35^\circ$C and positive above and with the positive effect leveling off above $28.5^\circ$C (Figure `r ref("fig:cov-effects")`).
 
 There were four outlier years when catch were much lower than expected based on prior catches: 1986, 1991, 1994 and 2013.  The 2.5-year average SST predicted the collapses in 1986 and 1991 (Figure `r ref("fig:fitted")`); the size of the residual with the covariate was much smaller than without the covariate. The largest collapse was in 1994 and the most recent, in our dataset, was 2014. The 2.5-year average SST did not predict the 1994 nor 2013 collapse. There was no change in the size  of the residual with and without the covariate. In fact, none of the covariates we tested changed the size of the model residuals for 1994 nor 2013. The causes of these unusual declines appear either unrelated to the environmental factors we studied. This suggests either that other factors, biological or anthropogenic, drove these declines or that a particular combination of environmental factors led to the declines. It should also be noted that our upwelling indices captured on one aspect of upwelling: the nearshore intensity. Other aspects of upwelling also affect oil sardines, such as the spatial extent both along the coast and off the coast and the timing of the start of upwelling. 
 
