--- a/Table_Hypotheses.Rmd
+++ b/Table_Hypotheses.Rmd
@@ -1,60 +1,63 @@
 ---
 output:
-  html_document: default
-  word_document: default
   pdf_document: 
     keep_tex: true
+  word_document: default
+  html_document: default
 header-includes: \usepackage[labelformat=empty]{caption}
 ---
 
 ```{r child = 'setup.Rmd'}
 ```
 
+\renewcommand{\arraystretch}{1.2}
+
+
 ```{r print-table-hyp, echo=FALSE, warning=FALSE}
 # Note to use, knit to pdf and edit the tex file to remove the header
 # up to the \begin{table}
 
-thecap = "Hypotheses for covariates affecting landings.  $S_t$ is quarter 3 (July-September) catch in the current season, $S_{t-1}$ is quarter 3 catch in the previous season. $N_t$ is the post-monsoon October-March catch in the current season and $N_{t-1}$ is the October-March catch in the prior season. Because the fishing season is July-June, $N_t$ spans two calendar years. DD = hypotheses related to effects of past abundance (landings) on current abundance. S = hypotheses related to spawning. L = hypotheses related to larval and juvenile growth and survival. A = hypotheses affecting all ages."
+thecap = "Hypotheses for covariates affecting landings.  $S_t$ is quarter 3 (July-September) catch in the current season, $S_{t-1}$ is quarter 3 catch in the previous season. $N_t$ is the post-monsoon October-March catch in the current season and $N_{t-1}$ is the October-March catch in the prior season. Because the fishing season is July-June, $N_t$ spans two calendar years. DD = hypotheses related to effects of past abundance (landings) on current abundance. S = hypotheses related to catch during the spawning months. L = hypotheses related to larval and juvenile growth and survival. A = hypotheses affecting all ages. See the introduction for discussion of the literature on the effects of environmental covariates on sardine landings."
 
 fullcap = paste("Table ", ref("tab:hypotheses"), ". ", thecap, sep="")
 
 DD1 = data.frame(
-  Hyp="DD1.  $S_t \sim N_{t-1}$",
+  Hyp="DD1 \\newline $S_t \\sim N_{t-1}$",
   Des = "$S_t$ is age 1+ age fish and reflects the 0-2yr fish in $N_{t-1}$ which have aged 3-6 months (Nair et al. 2016).",
   Response="$S_t$",
   Cov="$N_{t-1}$",
   stringsAsFactors=FALSE)
 
 DD2 = data.frame(
-  Hyp="DD2. $S_t \sim S_{t-1} + S_{t-2}$ \n $N_t \sim S_{t-1} + S_{t-2}$",
+  Hyp="DD2 \\newline $S_t \\sim S_{t-1} + S_{t-2}$ \n $N_t ~ S_{t-1} + S_{t-2}$",
   Des = "$S_t$ is age 1+ fish and is dominated by spent post-spawning fish (Nair et al. 2016). $S_t$ should be correlated with the abundance of the spawning stock and cohort strength. If cohort strength persists over time, landings in the current season should correlate with Jul-Sep landings in the previous two seasons.",
   Response="$S_t$ and $N_t$",
   Cov="$S_{t-1}$ and $S_{t-2}$",
   stringsAsFactors=FALSE)
 
 DD3 = data.frame(
-  Hyp="DD3.  $N_t \sim N_{t-1}$",
+  Hyp="DD3 \\newline $N_t \\sim N_{t-1}$",
   Des = "$N_{t-1}$ includes age 0, 1, 2 and 2+ fish (Nair et al. 2016). Thus the 0, 1, and 2 yr fish will appear 1 year later in the $N_t$ landings.",
   Response="$N_t$",
   Cov="$N_{t-1}$",
   stringsAsFactors=FALSE)
 
 HS1 = data.frame(
-  Hyp="S1.  $S_t \sim$ June-July precipitation in $t$",
+  Hyp="S1 \\newline $S_t \\sim$ June-July precipitation in $t$",
   Des = "The magnitude of precipitation in June-July directly or indirectly signals mature fish to spawn offshore, after which the spent adults migrate inshore to the fishery (Anthony Raja 1969, 1974; Srinath 1998).",
   Response="$S_t$",
   Cov="Jun-Jul precipitation in year $t$",
   stringsAsFactors=FALSE)
 
 HS2 = data.frame(
-  Hyp="S2.  $S_t \sim$ Apr-Mar precipitation in $t$",
+  Hyp="S2 \\newline $S_t \\sim$ Apr-Mar precipitation in $t$",
   Des="If there is pre-monsoon rain during Apr-May then spawning begins earlier and spent adults return to the fishery sooner and are exposed to the fishery longer.",
   Response="$S_t$",
   Cov="Apr-May precipitation in year $t$",
   stringsAsFactors=FALSE)
 
 HS3 = data.frame(
-  Hyp="S3.  $N_t \sim$ Apr-Mar precipitation in $t$",
+  Hyp="S3 \\newline $N_t \\sim$ Apr-Mar precipitation in $t$",
   Des="Precipitation is an indicator of climatic conditions during the period of egg development. This affect the success of spawning, thus affecting the 0-year class and the Oct-Mar catch (Antony Raja 1969, 1974; Srinath 1998).",
   Response="$N_t$",
   Cov="Apr-May and Jun-Jul precipitation in year $t$ and $t-1$",
@@ -62,74 +65,72 @@ HS3 = data.frame(
 
 
 HS4 = data.frame(
-  Hyp="S4.  $S_t \sim$ Jun-Sep upwelling index in $t$",
-  Des="High rates of upwelling drive mature fish further offshore and thus leads to lower exposure to the fishery.  This movement may be driven by advection of high phytoplankton biomass further offshore or increased inputs of low oxygenated water to the surface (Murty and Edelman 1970, Antony Raja 1973, Pillai et al 1991).",
+  Hyp="S4 \\newline $S_t \\sim$ Jun-Sep upwelling index in $t$",
+  Des="High rates of upwelling drive mature fish further offshore and thus leads to lower exposure to the fishery.  This movement may be driven by advection of high phytoplankton biomass further offshore or increased inputs of low oxygenated water to the surface (Murty and Edelman 1970, Antony Raja 1973, Pillai et al. 1991).",
   Response="$S_t$",
   Cov="Jun-Sep upwelling index in year $t$",
   stringsAsFactors=FALSE)
 
 HS5 = data.frame(
-  Hyp="S5.  $S_t$ and $N_t$ $\sim$ SST during Mar-May $t$",
+  Hyp="S5 \\newline $S_t \\sim$ SST during Mar-May in $t$ \\newline $N_t \\sim$ SST during Mar-May in $t$",
   Des="Extreme heating events prior to the spring monsoon drives mature fish from the spawning areas, resulting in poor recruitment and fewer age 0 year fish in the Oct-Mar catch (Antony Raja 1973, Pillai et al 1991).",
   Response="$S_t$ and $N_t$",
   Cov="Nearshore Mar-May SST in year $t$ and $t-1$",
   stringsAsFactors=FALSE)
 
 HL1 = data.frame(
-  Hyp="L1.  $S_t$ and $N_t$ $\sim$ nearshore SST during Oct-Dec $t-1$",
+  Hyp="L1 \\newline $S_t \\sim$ Oct-Dec nearshore SST $t-1$ \\newline $N_t \\sim$ Oct-Dec nearshore SST $t-1$",
   Des="Larval and juvenile growth and survival is affected by temperature. The temperature in the critical post-monsoon window, when somatic growth of the 0-year fish is highest, should be correlated with future abundance.",
   Response="$N_t$ and $S_t$",
   Cov="Nearshore SST during Oct-Dec in year t-1",
   stringsAsFactors=FALSE)
 
 HL2 = data.frame(
-  Hyp="L2.  $S_t$ and $N_t$ $\sim$ Jun-Sep upwelling index in $t-1$ and $t$",
+  Hyp="L2 \\newline $S_t \\sim$ Jun-Sep UPW in $t-1$ \\& $t$ \\newline $N_t \\sim$ Jun-Sep UPW in $t-1$ \\& $t$",
   Des="Higher upwelling rates leads to greater phytoplankton productivity, better larval and juvenile growth, and higher landings in the post monsoon Oct-March catch. However, extreme upwelling may decrease this catch, and future catches, due to poor oxygen conditions or advection of phytoplankton biomass.",
   Response="$N_t$ and $S_t$",
   Cov="Jun-Sep upwelling index in year $t-1$ and $t$",
   stringsAsFactors=FALSE)
 
 HL3 = data.frame(
-  Hyp="L3.  $S_t$ and $N_t$ $\sim$ Chl-a concentrations in $t-1$ and $t$",
+  Hyp="L3 \\newline $S_t\\sim$ CHL in $t-1$ \\& $t$ \\newline $N_t \\sim$ CHL in $t-1$ \\& $t$",
   Des="Surface Chl-a is a proxy for phytoplankton abundance and thus food availability, so higher bloom intensities may support greater fish abundance in the current and future years.",
   Response="$N_t$ and $S_t$",
   Cov="Chl-a density Jun-Sep in year $t-1$ and $t$ (for $N_t$)",
   stringsAsFactors=FALSE)
 
 HA2 = data.frame(
-  Hyp="A2.  $S_t$ and $N_t$ $\sim$ ONI in $t-1$",
-  Des="The El Nino/Southern Oscillation (ENSO) impacts a range of environmental parameters (e.g., precipitation, SST, frontal zones, winds, etc.) that may impact spawning and early survival of sardines (Rohit et al 2018).",
+  Hyp="A2 \\newline $S_t \\sim$ ONI in $t-1$ \\newline $N_t \\sim$ ONI in $t-1$",
+  Des="The El Nino/Southern Oscillation (ENSO) impacts a range of environmental parameters (e.g., precipitation, SST, frontal zones, winds, etc.) that may impact spawning and early survival of sardines (Supraba et al. 2016, Rohit et al. 2018).",
   Response="$N_t$ and $S_t$",
   Cov="ONI in year t-1",
   stringsAsFactors=FALSE)
 
 HA1 = data.frame(
-  Hyp="A1.  $S_t$ and $N_t$ $\sim$ 2.5-year average neashore SST",
-  Des="Spawning, early survival, and recruitment of sardines depends on a multitude of cascading factors summarized by the multi-year average  nearshore SST. This summary has been correlated with recruitment and abundance in other sardines (Checkley et al. 2017).",
+  Hyp="A1 \\newline $S_t \\sim$ 2.5-year ave. nearshore SST \\newline $N_t \\sim$ 2.5-year ave. nearshore SST",
+  Des="Spawning, early survival, and recruitment of sardines depends on a multitude of cascading factors summarized by the multi-year average  nearshore SST. The multi-year average SST has been correlated with recruitment and abundance in other sardines (Checkley et al. 2017) and is related to the optimal temperature windows for sardines (Takasuka et al. 2007).",
   Response="$N_t$ and $S_t$",
   Cov="3-year average SST",
   stringsAsFactors=FALSE)
 
-hyptable = rbind(DD1,DD2,DD3, HS1,HS2,HS3,HS4,HS5)[,-1]
-colnames(hyptable)=c("Hypothesis", "Resp.", "Covariates")
+hyptable = rbind(DD1,DD2,DD3, HS1,HS2,HS3,HS4,HS5)[,c("Hyp","Des")]
+colnames(hyptable)=c("Hypothesis", "Description")
 
 kable(hyptable, "latex", caption=fullcap, escape=FALSE) %>%
-  kableExtra::kable_styling(full_width=FALSE) %>%
-  kableExtra::column_spec(1, width="10.5cm") %>%
-  kableExtra::column_spec(2, width="1cm") %>%
-  kableExtra::column_spec(3, width="3cm")
+  kableExtra::kable_styling(full_width=FALSE, bootstrap_options = c("striped")) %>%
+  kableExtra::column_spec(1, width="5.5cm") %>%
+  kableExtra::column_spec(2, width="10cm")
 ```
 
 ```{r}
 thecap = "Continued."
 
 fullcap = paste("Table ", ref("tab:hypotheses"), ". ", thecap, sep="")
-hyptable = rbind(HL1, HL2, HL3, HA1, HA2)[,-1]
-colnames(hyptable)=c("Hypothesis", "Resp.", "Covariates")
+hyptable = rbind(HL1, HL2, HL3, HA1, HA2)[,c("Hyp","Des")]
+colnames(hyptable)=c("Hypothesis", "Description")
 
 kable(hyptable, "latex", caption=fullcap, escape=FALSE) %>%
-  kableExtra::kable_styling(full_width=FALSE) %>%
-  kableExtra::column_spec(1, width="10.5cm") %>%
-  kableExtra::column_spec(2, width="1cm") %>%
-  kableExtra::column_spec(3, width="3cm")
+  kableExtra::kable_styling(full_width=FALSE, bootstrap_options = c("striped")) %>%
+  kableExtra::column_spec(1, width="5.5cm") %>%
+  kableExtra::column_spec(2, width="10cm")
 ```
