--- a/todo.txt
+++ b/todo.txt
@@ -9,7 +9,9 @@ Need to do influence analysis via cross-validation (LOO).  1994 catch is influen
 
 cross-validation test of the catch models
 
-Cut the cartoon of sardine life-cycle? Or need to improve the quality of the figure.
+show correlation between CHl and UPW?.
+
+add Chidambaram and Menon to refs and to section on plankton and SST cor
 
 fix Rohit 2018 ref in endnote when return to NWFSC
 
@@ -25,6 +27,8 @@ period of closure (that too not for Kerala coast)
 • Oil sardine shoals do not perform long distance migrations like anchovies which concentrate south of Cape Comorin during the summer monsoon period and then spread northwards along the Malabar coast during the dry
 season (November onwards).
 
+=======
+Find summary review articles to cite. Rohit et al 2018, 
 
 add
 
@@ -86,4 +90,4 @@ Add
   pages = {9152-9159}
   }
 
-Fix {N}in\~{o}
+Fix {N}i\~{n}o
